Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-07-19 (SVN):
    * Moved SDLMain.[m|h] from MacOSX subdir to under h2shared. Added
      SDLMain.o to SYSOBJ_SYS in the makefiles for (gl)h2 and (gl)hw.

2012-07-19 (SVN):
    * utils (LoadFile): don't use SafeMalloc() to avoid an unnecessary
      memset. reverted to using malloc() directly.

2012-07-19 (SVN):
    * utils, jsh2colour: removed unused GetFileSpace() and file globals.
      removed unnecessary check for extfile existence during arguments
      parsing, because ParseDefFile() already errors out if the file is
      not found.

2012-07-18 (SVN):
    * cl_demo.c (CL_PlayDemo_f): set key_dest to key_game only when the
      demo file is successfully opened.

2012-07-18 (SVN):
    * cl_demo.c: for a command like "record demoname map [track]", don't
      continue if the map cannot be started. do not continue if the demo
      file cannot be opened for the timedemo command.

2012-07-18 (SVN):
    * cl_demo.c (CL_PlayDemo_f): don't use fscanf() to read forcetrack:
      even though a *.dem file is a binary, cls.forcetrack is "printed"
      at the very start as a decimal number followed by a '\n'. a space
      character e.g. 0x20 (' ') following the '\n' makes fscanf to skip
      that byte too and screws up further reads. we now manually parse
      the forcetrack, like q1 code does, and also verify that the '\n'
      byte appears among the very first 12 bytes of the file.
    * updated version date stamp to 2012-07-18.

2012-07-17 (SVN):
    * utils, dhcc: add new flowinfo_t structure. instead of abusing the
      op member of the statement, store the if and do counts in the new
      flowinfo structure. this is better, because the old code assumed
      that the opcodes numbers could not go past 99, which is incorrect
      with the portals mission pack and h2w where switch statements are
      added and the highest opcode is 104. dhcc now properly prints the