@@ -751,7 +751,7 @@ CPPFLAGS += -D_NO_MIDIDRV
 endif
 ifeq ($(TARGET_OS),unix)
 ifeq ($(HOST_OS),darwin)
-SYSOBJ_MIDI:= midi_mac.o
+SYSOBJ_MIDI:= midi_osx.o
 else
 SYSOBJ_MIDI:= midi_nul.o
 CPPFLAGS += -D_NO_MIDIDRV
